--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,7 +31,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Build
+      - name: Install Dependencies
+        run: npm install
+      - name: Build Astro
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
